# minicad_startingpoint

./: LICENSE  README.md  Untitled Diagram.drawio  main.cpp
Minicad-Assignment/: CMakeLists.txt  README.md  main.cpp
Minicad-Assignment/.cache/clangd/index/: circle.cpp.F1DBBF55D01A9258.idx  command.h.8CA74FC4DDC62053.idx  command_stack.cpp.14496FCC28A0E888.idx  command_stack.h.14911BE3C6897BAC.idx  console.cpp.1B167A11475ECF52.idx  console.h.E52F3DC7D113E454.idx  create_circle_command.cpp.8078CB79BA55E25F.idx  create_square_command.cpp.9876226E9D8A1F7B.idx  create_square_command.h.07C5D93A360944FE.idx  create_triangle_command.cpp.19006DD24363C342.idx  create_triangle_command.h.5332836E3A6DEC38.idx  logger.h.A2BF58EB37625364.idx  main.cpp.2080C2CEE12C0BC8.idx  menu.cpp.85EBB59BA4B7922D.idx  menu.h.0027051A51F4E0C9.idx  point.cpp.2A81F9094D82D2B6.idx  remove_shape_command.h.95BE4B13B9AEBDB4.idx  scale_shape_command.cpp.3DCCB32885484024.idx  screen.h.D56BC98B7AD38747.idx  square.cpp.1000930576AC5D8D.idx  square.h.46BA5FE26ADEDAC7.idx  translate_shape_command.cpp.C9C32397C68F7FAE.idx  translate_shape_command.h.34853B96F60B8E34.idx  triangle.cpp.AE4AD03C9780549A.idx  (+2 more)
Minicad-Assignment/.devcontainer/: devcontainer.json
Minicad-Assignment/model/: circle.h  square.cpp  triangle.cpp
Minicad-Assignment/ui/commands/: command_stack.cpp  command_stack.h  create_triangle_command.cpp  create_triangle_command.h  remove_shape_command.cpp  translate_shape_command.cpp
Minicad-Assignment/ui/ncurses/: canvas.h  console.cpp  menu.cpp  menu.h  screen.h  window.h
model/: circle.cpp  (+9 more)
(+61 files in other folders)
